--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container{
+    width: 1100px;
+    margin: auto;
+    display: flex;
+}
+.albums{
+    min-width: 30%;
+}
+.album{
+    padding: 10px 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.albums ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.albums ul li{
+    padding: 10px;
+    margin: 0;
+
+    border-bottom: 1px solid aliceblue;
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.photos{
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+}
+
+.image{
+    width: 250px;
+    height: 250px;
+    box-sizing: border-box;
 }
