--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,13 @@
     padding: 10px 0;
 }
 
+.album:hover{
+    background-color: cadetblue;
+}
+.selected{
+    background-color: cadetblue;
+}
+
 .albums ul{
     padding: 0;
     margin: 0;
